# routes/index.js
@@ -1,6 +1,7 @@
 const router = require('express').Router()
 const usersRoute = require('./users');
 const shipsRoute = require('./shipRegistry');
+const passport = require('passport');
 
 router.use('/', require('./swagger'));
 
@@ -12,5 +13,14 @@ router.get('/', (req, res) => {
 router.use('/users', usersRoute);
 router.use('/ship-in', shipsRoute);
 // router.use('/ship-out', shipsRoute);
+
+router.get('/login', passport.authenticate('github'), (req, res) => {})
+
+router.get('/logout', function(req, res, next) {
+    req.logout(function(err) {
+        if (err) { return next(err)};
+        res.redirect('/');
+    });
+});
 
 module.exports = router;
